--- a/FileStorage/main.css
+++ b/FileStorage/main.css
@@ -100,7 +100,7 @@ a:hover {
 }
 
 /* for the heading */
-heading{
+header{
     display: flex;
     justify-content: center;
     align-items: center;
@@ -344,7 +344,7 @@ article div video {
     flex-direction: column;
 
     align-items: center;
-    padding: 5%;
+
 }
 
 
